<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mypc.aplikasimodul2kel37.AboutActivity">

    <ImageView
        android:id="@+id/agus"
        android:layout_width="126dp"
        android:layout_height="145dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/agus" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardView"
        style="@style/CardView.Light"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agus"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/twnama1"
                android:layout_width="97dp"
                android:layout_height="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="196dp"
                android:text="@string/nameabout1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/twnim1"
                android:layout_width="141dp"
                android:layout_height="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/nimabout1"
                app:layout_constraintStart_toStartOf="@+id/twnama1"
                app:layout_constraintTop_toBottomOf="@+id/twnama1" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


    <ImageView
        android:id="@+id/saskia"
        android:layout_width="126dp"
        android:layout_height="145dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/agus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/agus"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/saskia" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        style="@style/CardView.Light"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/saskia">

        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/twnama2"
                android:layout_width="97dp"
                android:layout_height="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="196dp"
                android:text="@string/nameabout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/twnim2"
                android:layout_width="115dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:text="@string/nimabout2"
                app:layout_constraintStart_toStartOf="@+id/twnama2"
                app:layout_constraintTop_toBottomOf="@+id/twnama2" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
